[package]
name = "bench-repr"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
bytes = "1.0"

[dependencies]
mimalloc = { version = "*", default-features = false }

[[bench]]
name = "bench"
harness = false
